force-app/main/default/objects/Event__c/fields/CouplesEvent__c.field-meta.xml
<CustomField>
    <fullName>CouplesEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Couples Event</label>
    <type>Checkbox</type>
</CustomField>