force-app/main/default/objects/Event__c/fields/Google_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Google Calendar</label>
    <referenceTo>GoogleCalendar__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>